--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
     <link rel="stylesheet" href="/assets/WiFeedback/css/wi-feedback.min.css">
 
     <!-- ====== FONTS ======-->
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet"> 
 
     <!-- ====== ****MAIN CSS**** ======-->
     <link rel="stylesheet" href="css/style.css">
@@ -66,6 +68,96 @@
 
 </head>
 <body>
+    <header id="menu">
+        <div class="container">
+            <div class="row">
+                <div class="col-xl-12">
+                    <nav class="navbar navbar-expand-lg navbar-light">
+                        <a class="navbar-brand" href="#"><img src="img/logo.svg" alt=""></a>
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                          <span class="navbar-toggler-icon"></span>
+                        </button>
+                      
+                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                          <ul class="navbar-nav ml-auto d-flex align-items-center">
+                            <li class="nav-item mr-5">
+                              <a class="nav-link hover-effect" href="#">About Us</a>
+                            </li>
+                            <li class="nav-item dropdown mr-5">
+                              <a class="nav-link dropdown-toggle hover-effect" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Resources
+                              </a>
+                              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="#">Action</a>
+                                <a class="dropdown-item" href="#">Another action</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="#">Something else here</a>
+                              </div>
+                            </li>
+                            <li class="nav-item mr-5">
+                                <button type="button" class="btn btn-outline-primary">Contact Us</button>
+                            </li>
+                          </ul>
+                        </div>
+                      </nav>
+                </div>
+                <div class="row hdr-content">
+                    <div class="col-xl-5 ml-5 hdr-content-ttl">
+                        <h1>Be Smart, Think Smart, Save Money</h1>
+                        <p>Compare your take-home today</p>
+                        <form class="hdr_form">
+                            <div class="form-row">
+                                <div class="form-group col-xl-12">
+                                  <input type="tel" class="form-control button-menu" id="inputTell" placeholder="Phone Number">
+                                </div>
+                            </div>
+                            <div class="form-row d-flex align-items-center">
+                              <div class="form-group col-xl-5">
+                                <input type="number" class="form-control button-menu" id="inputRate" placeholder="Day Rate">
+                              </div>
+                              <div class="form-group col-xl-7 d-flex justify-content-end">
+                                    <button type="submit" class="btn btn-primary button-menu">Submit</button>
+                                </div>
+                            </div>
+                          </form>
+                    </div>
+                    <div class="col-xl-6 hdr-pic">
+                        <div class="bg-picture d-flex justify-content-center">
+                            <img src="img/happy-people.svg" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+    <section id="features" class="d-flex justify-content-center">
+        <div class="container">
+            <div class="row features_row_ttl">
+                <div class="col-xl-12">
+                    <h3 class="text-center">Features</h3>
+                    <p class="features_row_p">Our key competitive advantages</p>
+                </div>
+            </div>
+            <div class="row features_row_cont">
+                <div class="col-xl-4 align-items-center">
+                    <img src="img/icon-crown.svg" alt="">
+                    <h4>Header</h4>
+                    <p class="h4_descriptor">Interdum et malesuada fames ac ante  primis in faucibus. Duis vitae sem lacus. ut eros vel libero pharetra pharetra. Praesent nec pellentesque risus. </p>
+                </div>
+                <div class="col-xl-4">
+                    <img src="img/icon-hand-shake.svg" alt="">
+                    <h4>Header</h4>
+                    <p class="h4_descriptor">Interdum et malesuada fames ac ante  primis in faucibus. Duis vitae sem lacus. ut eros vel libero pharetra pharetra. Praesent nec pellentesque risus. </p>
+                </div>
+                <div class="col-xl-4">
+                    <img src="img/icon-dolar-apple.svg" alt="">
+                    <h4>Header</h4>
+                    <p class="h4_descriptor">Interdum et malesuada fames ac ante  primis in faucibus. Duis vitae sem lacus. ut eros vel libero pharetra pharetra. Praesent nec pellentesque risus. </p>
+                </div>
+            </div>
+        </div>
+    </section>
+    
 
 </body>
 </html>
