how-it, Features

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
 </head>
 <body>
-    <header id="menu">
+    <header id="menu" class="change-bg">
         <div class="container">
             <div class="row">
                 <div class="col-xl-12">
@@ -132,32 +132,55 @@
     </header>
     <section id="features" class="d-flex justify-content-center">
         <div class="container">
-            <div class="row features_row_ttl">
+            <div class="row row_ttl">
                 <div class="col-xl-12">
                     <h3 class="text-center">Features</h3>
-                    <p class="features_row_p">Our key competitive advantages</p>
+                    <p class="row_p">Our key competitive advantages</p>
                 </div>
             </div>
-            <div class="row features_row_cont">
-                <div class="col-xl-4 align-items-center">
-                    <img src="img/icon-crown.svg" alt="">
-                    <h4>Header</h4>
+            <div class="row features_row_cont text-center">
+                <div class="col-xl-4">
+                    <img class="mb-4" src="img/icon-crown.svg" alt="">
+                    <h4 class="mb-3">Header</h4>
                     <p class="h4_descriptor">Interdum et malesuada fames ac ante  primis in faucibus. Duis vitae sem lacus. ut eros vel libero pharetra pharetra. Praesent nec pellentesque risus. </p>
                 </div>
                 <div class="col-xl-4">
-                    <img src="img/icon-hand-shake.svg" alt="">
-                    <h4>Header</h4>
+                    <img class="mb-4" src="img/icon-hand-shake.svg" alt="">
+                    <h4 class="mb-3">Header</h4>
                     <p class="h4_descriptor">Interdum et malesuada fames ac ante  primis in faucibus. Duis vitae sem lacus. ut eros vel libero pharetra pharetra. Praesent nec pellentesque risus. </p>
                 </div>
                 <div class="col-xl-4">
-                    <img src="img/icon-dolar-apple.svg" alt="">
-                    <h4>Header</h4>
+                    <img class="mb-4" src="img/icon-dolar-apple.svg" alt="">
+                    <h4 class="mb-3">Header</h4>
                     <p class="h4_descriptor">Interdum et malesuada fames ac ante  primis in faucibus. Duis vitae sem lacus. ut eros vel libero pharetra pharetra. Praesent nec pellentesque risus. </p>
                 </div>
             </div>
         </div>
     </section>
-    
+    <section id="how-works" class="change-bg">
+      <div class="container">
+        <div class="row row_ttl">
+          <div class="col-xl-12 how-works_ttl">
+              <h3 class="text-center">How it works</h3>
+              <p class="row_p">Get the result in 3 easy steps</p>
+          </div>
+      </div>
+        <div class="row how-works_cont d-flex justify-content-between mt-4 pb-5">
+          <div class="col-xl-3">
+            <h5>01</h5>
+            <p class="h5-descriptor">Enter your details</p>
+          </div>
+          <div class="col-xl-3">
+            <h5>02</h5>
+            <p class="h5-descriptor">We calculate your take-home from   over 200+ payroll provider</p>
+          </div>
+          <div class="col-xl-3">
+            <h5>03</h5>
+            <p class="h5-descriptor">We contact you to give you the   results</p>
+          </div>
+        </div>
+      </div>
+    </section>
 
 </body>
 </html>
