call2act, form_long, price

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                                 <input type="number" class="form-control button-menu" id="inputRate" placeholder="Day Rate">
                               </div>
                               <div class="form-group col-xl-7 d-flex justify-content-end">
-                                    <button type="submit" class="btn btn-primary button-menu">Submit</button>
+                                    <button type="submit" class="btn btn-primary button-menu ">Submit</button>
                                 </div>
                             </div>
                           </form>
@@ -181,6 +181,92 @@
         </div>
       </div>
     </section>
-
+    <section id="call2act">
+      <div class="row call2act_row d-flex justify-content-center pb-5 pt-5">
+        <div class="col-xl-5 call2act_block">
+            <h2 class="text-center">Call to action</h2>
+              <p class="h2-descriptor text-center">Mauris sed dapibus metus. Integer dictum fringilla metus, facilisis lacinia lorem  facilisis eget. Mauris auctor lacinia velit, in pretium lectus placerat nec. Nam porttitor nisi in velit   blandit ultricies. </p>
+            <button class="btn btn-primary">Learn more</button>
+        </div>
+      </div>
+    </section>
+    <section id="form_long">
+      <div class="row form_lone_row d-flex justify-content-center pt-5 pb-5">
+        <div class="col-xl-8 offset-xl-2">
+          <form class="form_long-form">
+            <div class="row d-flex align-items-end pb-5 pt-5">
+              <div class="col-xl-3">
+                <label for="number-employ">Number of employees</label>
+                <input type="text" class="form-control button-menu" id="number-employ">
+              </div>
+              <div class="col-xl-3">
+                <label for="number-employ">For the payroll, I use</label>
+                <select class="custom-select button-menu form-arrow" id="validationDefault04" required>
+                  <option></option>
+                  <option></option>
+                </select>
+              </div>
+              <div class="col-xl-3">
+                <button type="submit" class="btn btn-primary">Compare plans</button>
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
+    </section>
+    <section id="price">
+      <div class="container">
+        <div class="row pt-5 pb-5 row_ttl">
+          <div class="col-xl-12 how-works_ttl">
+            <h3 class="text-center">Price</h3>
+            <p class="row_p">Compare our tariff plans</p>
+        </div>
+        </div>
+        <div class="row row_price d-flex justify-content-center pb-5">
+          <div class="col-xl-4">
+            <div class="card">
+              <div class="card-title_container mt-4">
+                <h6 class="card-title text-center">Tier 1</h6>
+              </div>
+              <div class="card-body">
+                <p class="card-text"><span class="dollar">$</span> 11.99 <span  class="month">/ month</span></p>
+              </div>
+                  <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="311.5px"    height="2.5px">
+                    <path fill-rule="evenodd"  stroke="rgb(63, 114, 175)" stroke-width="1px" stroke-dasharray="10, 10, 10"     stroke-linecap="butt" stroke-linejoin="miter" fill="none" d="M0.500,0.499 L310.500,0.499 "/>
+                  </svg>
+              <ul class="list-group list-group-flush text-center mt-3 pb-4">
+                <li class="list-group-item">Some option number 1</li>
+                <li class="list-group-item">Some option number 2</li>
+                <li class="list-group-item">Some option number 3</li>
+                <li class="list-group-item">Some option number 4</li>
+                <li class="list-group-item">Some option number 5</li>
+              </ul>
+              <button class="btn btn-primary ">Choose</button>
+            </div>
+          </div>
+          <div class="col-xl-4 pb-5">
+            <div class="card card-right">
+              <div class="card-title_container mt-4">
+                <h6 class="card-title text-center">Tier 1</h6>
+              </div>
+              <div class="card-body">
+                <p class="card-text"><span class="dollar">$</span> 11.99 <span  class="month">/ month</span></p>
+              </div>
+                  <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="311.5px"    height="2.5px">
+                    <path fill-rule="evenodd"  stroke="rgb(17, 45, 78)" stroke-width="1px" stroke-dasharray="10, 10, 10"     stroke-linecap="butt" stroke-linejoin="miter" fill="none" d="M0.500,0.499 L310.500,0.499 "/>
+                  </svg>
+              <ul class="list-group list-group-flush text-center mt-3 pb-4">
+                <li class="list-group-item">Some option number 1</li>
+                <li class="list-group-item">Some option number 2</li>
+                <li class="list-group-item">Some option number 3</li>
+                <li class="list-group-item">Some option number 4</li>
+                <li class="list-group-item">Some option number 5</li>
+              </ul>
+              <button class="btn btn-primary ">Choose</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 </body>
 </html>
