--- a/index.html
+++ b/index.html
@@ -355,8 +355,32 @@
             <p class="faq_descr">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod porro eius, ullam pariatur ipsum itaque velit reiciendis ea cum alias.</p>
           </div>
         </div>
-        <div class="col-xl-12">
+        <div class="col-xl-12 pb-5">
           <button class="btn btn-primary faq_hid-btn">All questions</button>
+        </div>
+      </div>
+      </section>
+      <section id="map">
+        <div class="row map_row">
+          <div class="col-xl-12">
+            <section class="map">
+              <iframe src="https://www.google.com/maps/d/embed?mid=1o1bs1QvAQbiENsg5L1vkT84wxfsTrpbi" width="100%" height="700" frameborder="0" style="border:0;" scrolling="no" marginheight="0" marginwidth="0" allowfullscreen></iframe>
+            </section>
+        </div>
+        <div class="col-xl-3 map_informer card">
+          <p class="map_informer_ttl">Contact</p>
+          <div class="map_info_block">
+            <p class="map_informer_sub-ttl">Phone:</p>
+            <a href="tel:+0 800 123 45 67" class="map_informer_info">0 800 123 45 67</a>
+          </div>
+          <div class="map_info_block">
+            <p class="map_informer_sub-ttl">Hours available:</p>
+            <p class="map_informer_info mb-0">11AM — 8PM</p>
+          </div>
+          <div class="map_info_block">
+            <p class="map_informer_sub-ttl">Email:</p>
+            <a href="mailto:support@yoursite.com" class="map_informer_info">support@yoursite.com</a>
+          </div>
         </div>
       </div>
       </section>
