--- a/index.html
+++ b/index.html
@@ -384,6 +384,55 @@
         </div>
       </div>
       </section>
+      <footer id="footer">
+        <div class="container">
+          <div class="row footer_row pb-4 pt-5 no-gutters">
+            <div class="col-xl-4">
+              <img src="img/logo_foot.png" alt="">
+              <p class="footer_txt mt-4">Praesent varius feugiat dolor, a pulvinar leo facilisis blandit. Sed quis lobortis mauris, et lacinia justo. Sed sollicitudin risus consequat pulvinar efficitur. Praesent ac augue in lorem laoreet bibendum. Vestibulum mattis accumsan nulla eget sagittis.</p>
+            </div>
+            <div class="col-xl-2">
+              <p class="footer_txt-hdr">Documents</p>
+              <ul class="footer_links">
+                <li class="footer_txt"><a href="#">Privacy policy</a></li>
+                <li class="footer_txt"><a href="#">Terms and conditions</a></li>
+              </ul>
+            </div>
+            <div class="col-xl-2">
+              <p class="footer_txt-hdr">Menu</p>
+              <ul class="footer_links">
+                <li class="footer_txt"><a href="#">About Us</a></li>
+                <li class="footer_txt"><a href="#">Resources</a></li>
+                <li class="footer_txt"><a href="#">Contact Us</a></li>
+              </ul>
+            </div>
+            <div class="col-xl-2">
+              <p class="footer_txt-hdr">About company</p>
+              <ul class="footer_links">
+                <li class="footer_txt">Company no.: 12345678</li>
+                <li class="footer_txt">VAT Number: 123 4567 89</li>
+              </ul>
+            </div>
+            <div class="col-xl-2">
+              <p class="footer_txt-hdr">Follow Us</p>
+              <div class="footer_icons">
+                <img src="img/fb.svg" alt="">
+                <img src="img/ln.svg" alt="">
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-xl-12">
+              <hr class="line">
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-xl-12 d-flex justify-content-center">
+              <span class="adress">Trinity Court, Molly Millars Ln, Wokingham RG41 2PY, United Kingdom</span>
+            </div>
+          </div>
+        </div>
+      </footer>
 </body>
 </html>
 
