--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                       </nav>
                 </div>
                 <div class="row hdr-content">
-                    <div class="col-xl-5 ml-5 hdr-content-ttl">
+                    <div class="col-xl-5 col-lg-8 ml-5 hdr-content-ttl">
                         <h1>Be Smart, Think Smart, Save Money</h1>
                         <p>Compare your take-home today</p>
                         <form class="hdr_form">
@@ -122,7 +122,7 @@
                                 <input type="number" class="form-control button-menu" id="inputRate" placeholder="Day Rate">
                               </div>
                               <div class="form-group col-xl-7 d-flex justify-content-end">
-                                    <button type="submit" class="btn btn-primary button-menu ">Submit</button>
+                                    <button type="submit" class="btn btn-primary button-menu col-lg-12">Submit</button>
                                 </div>
                             </div>
                           </form>
@@ -197,6 +197,7 @@
       </div>
     </section>
     <section id="form_long">
+      <div class="cont-adaptive">
       <div class="row form_lone_row d-flex justify-content-center pt-5 pb-5">
         <div class="col-xl-8 offset-xl-2">
           <form class="form_long-form">
@@ -213,12 +214,13 @@
                 </select>
               </div>
               <div class="col-xl-4">
-                <button type="submit" class="btn btn-primary">Compare plans</button>
+                <button type="submit" class="btn btn-primary btn-comp-plans">Compare plans</button>
               </div>
             </div>
           </form>
         </div>
       </div>
+    </div>
     </section>
     <section id="price">
       <div class="container">
@@ -297,31 +299,32 @@
           <h3 class="text-center">Review</h3>
           <p class="row_p">Our partners are in a hurry to share their opinions about us</p>
         </div>
-        <div class="owl-carousel review_carusel pb-5 pt-5 text-center">
-          <div class="item mt-3 mb-3">
-              <div class="review_quotes">,,</div>
-              <p class="review-txt">Fusce faucibus euismod nisl non fringilla. Integer semper dui justo, quis cursus mi tempus in. Sed pretium diam ex, non convallis magna pretium vel. Maecenas semper augue vel</p>
-              <p class="review-sign">Sahara Reeves</p>
-          </div>
-          <div class="item mt-3 mb-3">
-              <div class="review_quotes">,,</div>
-              <p class="review-txt">Etiam hendrerit malesuada vestibulum. Nunc sed tortor enim. Suspendisse ultrices elit  ut elit scelerisque, sit amet pharetra felis viverra. Morbi ultricies orci augue, a efficitur risus</p>
-              <p class="review-sign">Samirah Mckeown</p>
-          </div>
-          <div class="item mt-3 mb-3">
-              <div class="review_quotes">,,</div>
-              <p class="review-txt">Sed sed posuere urna, et dignissim ex. Mauris sit amet ultrices orci, ut fermentum dui. Nulla ut efficitur leo, at efficitur magna. Vestibulum ante ipsum primis</p>
-              <p class="review-sign">John Smith</p>
-          </div>
-          <div class="item mt-3 mb-3">
-              <div class="review_quotes">,,</div>
-              <p class="review-txt">Fusce volutpat ex ac magna aliquet porta. Donec fermentum pretium tellus, et consequat leo blandit eu. Mauris varius felis massa, bibendum egestas risus vehicula et.</p>
-              <p class="review-sign">Patrick Wilson</p>
+            <div class="owl-carousel review_carusel pb-5 pt-5 text-center">
+              <div class="item mt-3 mb-3">
+                  <div class="review_quotes">,,</div>
+                  <p class="review-txt">Fusce faucibus euismod nisl non fringilla. Integer semper dui justo, quis cursus mi tempus in. Sed pretium diam ex, non convallis magna pretium vel. Maecenas semper augue vel</p>
+                  <p class="review-sign">Sahara Reeves</p>
+              </div>
+              <div class="item mt-3 mb-3">
+                  <div class="review_quotes">,,</div>
+                  <p class="review-txt">Etiam hendrerit malesuada vestibulum. Nunc sed tortor enim. Suspendisse ultrices elit  ut elit scelerisque, sit amet pharetra felis viverra. Morbi ultricies orci augue, a efficitur risus</p>
+                  <p class="review-sign">Samirah Mckeown</p>
+              </div>
+              <div class="item mt-3 mb-3">
+                  <div class="review_quotes">,,</div>
+                  <p class="review-txt">Sed sed posuere urna, et dignissim ex. Mauris sit amet ultrices orci, ut fermentum dui. Nulla ut efficitur leo, at efficitur magna. Vestibulum ante ipsum primis</p>
+                  <p class="review-sign">John Smith</p>
+              </div>
+              <div class="item mt-3 mb-3">
+                  <div class="review_quotes">,,</div>
+                  <p class="review-txt">Fusce volutpat ex ac magna aliquet porta. Donec fermentum pretium tellus, et consequat leo blandit eu. Mauris varius felis massa, bibendum egestas risus vehicula et.</p>
+                  <p class="review-sign">Patrick Wilson</p>
           </div>
         </div>
       </div>
     </section>
     <section id="faq" class="change-bg">
+      <div class="cont-adaptive">
       <div class="row row_faqs row_ttl pb-5 pt-5">
         <div class="col-xl-12 how-works_ttl">
           <h3 class="text-center">FAQ</h3>
@@ -359,34 +362,36 @@
           <button class="btn btn-primary faq_hid-btn">All questions</button>
         </div>
       </div>
+    </div>
       </section>
       <section id="map">
         <div class="row map_row">
+          <div class="col-xl-3 col-lg-12 col-12 map_informer card">
+            <p class="map_informer_ttl">Contact</p>
+            <div class="map_info_block">
+              <p class="map_informer_sub-ttl">Phone:</p>
+              <a href="tel:+0 800 123 45 67" class="map_informer_info">0 800 123 45 67</a>
+            </div>
+            <div class="map_info_block">
+              <p class="map_informer_sub-ttl">Hours available:</p>
+              <p class="map_informer_info mb-0">11AM — 8PM</p>
+            </div>
+            <div class="map_info_block">
+              <p class="map_informer_sub-ttl">Email:</p>
+              <a href="mailto:support@yoursite.com" class="map_informer_info">support@yoursite.com</a>
+            </div>
+          </div>
           <div class="col-xl-12">
             <section class="map">
               <iframe src="https://www.google.com/maps/d/embed?mid=1o1bs1QvAQbiENsg5L1vkT84wxfsTrpbi" width="100%" height="700" frameborder="0" style="border:0;" scrolling="no" marginheight="0" marginwidth="0" allowfullscreen></iframe>
             </section>
         </div>
-        <div class="col-xl-3 map_informer card">
-          <p class="map_informer_ttl">Contact</p>
-          <div class="map_info_block">
-            <p class="map_informer_sub-ttl">Phone:</p>
-            <a href="tel:+0 800 123 45 67" class="map_informer_info">0 800 123 45 67</a>
-          </div>
-          <div class="map_info_block">
-            <p class="map_informer_sub-ttl">Hours available:</p>
-            <p class="map_informer_info mb-0">11AM — 8PM</p>
-          </div>
-          <div class="map_info_block">
-            <p class="map_informer_sub-ttl">Email:</p>
-            <a href="mailto:support@yoursite.com" class="map_informer_info">support@yoursite.com</a>
-          </div>
-        </div>
+
       </div>
       </section>
       <footer id="footer">
         <div class="container">
-          <div class="row footer_row pb-4 pt-5 no-gutters">
+          <div class="row footer_row pb-4 pt-5 no-gutters d-flex justify-content-center">
             <div class="col-xl-4">
               <img src="img/logo_foot.png" alt="">
               <p class="footer_txt mt-4">Praesent varius feugiat dolor, a pulvinar leo facilisis blandit. Sed quis lobortis mauris, et lacinia justo. Sed sollicitudin risus consequat pulvinar efficitur. Praesent ac augue in lorem laoreet bibendum. Vestibulum mattis accumsan nulla eget sagittis.</p>
@@ -414,7 +419,7 @@
               </ul>
             </div>
             <div class="col-xl-2">
-              <p class="footer_txt-hdr">Follow Us</p>
+                <p class="footer_txt-hdr">Follow Us</p>
               <div class="footer_icons">
                 <img src="img/fb.svg" alt="">
                 <img src="img/ln.svg" alt="">
